--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
     <title>App de Previsão do Tempo</title>
   </head>
   <body>
+    <header>
+      <a
+        href="https://www.linkedin.com/in/danieljorgee/"
+        target="_blank"
+        class="linkExterno"
+      >
+        <i class="fa-brands fa-linkedin-in"></i
+      ></a>
+      <a
+        href="https://github.com/danyeljorge"
+        target="_blank"
+        class="linkExterno"
+        ><i class="fa-brands fa-github-alt"></i
+      ></a>
+    </header>
     <main>
       <div class="conternerprincipal">
         <h1 class="titulo">Previsão de Tempo</h1>
